@startuml heranca_associacao

title Diagrama de Classes

class Pessoa{
    - nome:String 
    - endereco: String
    + construtor(nome, endereco)
}

class PessoaFisica{
    - cpf:String
    - data: Date 
    + construtor(pessoa, cpf, data)
    + validar_cpf(cpf)
    + validar_estado_civil(estado_civil)
}

class PessoaJuridica{
    - cnpj: String
    + construtor(pessoa, cnpj)
    + validar_cnpj(cnpj)
    + validar_ie(ie)
}

Pessoa <|-- PessoaFisica
Pessoa <|-- PessoaJuridica

@enduml